--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,66 @@
-aiohappyeyeballs==2.4.0
-aiohttp==3.10.5
-aiomysql==0.2.0
-aiosignal==1.3.1
-annotated-types==0.7.0
-anyio==4.6.0
-attrs==24.2.0
-certifi==2024.8.30
-colorama==0.4.6
-distro==1.9.0
-frozenlist==1.4.1
-h11==0.14.0
-httpcore==1.0.5
-httpx==0.27.2
-idna==3.10
-jiter==0.5.0
-multidict==6.1.0
-mysql-connector-python==9.0.0
-openai==1.47.0
-pyaes==1.6.1
-pyasn1==0.6.1
-pydantic==2.9.2
-pydantic-settings==2.5.2
-pydantic_core==2.23.4
-PyMySQL==1.1.1
-python-dotenv==1.0.1
-rsa==4.9
-sniffio==1.3.1
-Telethon==1.36.0
-tqdm==4.66.5
-typing_extensions==4.12.2
-yarl==1.11.1
-numpy~=2.1.2
-SQLAlchemy~=2.0.36
-
-pytest~=8.3.3
+aiohappyeyeballs>=2.4.3
+aiohttp>=3.11.7
+aiomysql>=0.2.0
+aiosignal>=1.3.1
+aiosqlite>=0.20.0
+annotated-types>=0.7.0
+anyio>=4.6.2.post1
+attrs>=24.2.0
+certifi>=2024.8.30
+charset-normalizer>=3.4.0
+colorama>=0.4.6
+distro>=1.9.0
+filelock>=3.16.1
+frozenlist>=1.5.0
+fsspec>=2024.10.0
+greenlet>=3.1.1
+h11>=0.14.0
+httpcore>=1.0.7
+httpx>=0.27.2
+huggingface-hub>=0.26.2
+idna>=3.10
+iniconfig>=2.0.0
+Jinja2>=3.1.4
+jiter>=0.8.0
+joblib>=1.4.2
+MarkupSafe>=3.0.2
+mpmath>=1.3.0
+multidict>=6.1.0
+mysql-connector-python>=9.1.0
+networkx>=3.4.2
+numpy>=2.1.3
+openai>=1.55.1
+packaging>=24.2
+pillow>=11.0.0
+pluggy>=1.5.0
+propcache>=0.2.0
+pyaes>=1.6.1
+pyasn1>=0.6.1
+pydantic>=2.10.2
+pydantic-settings>=2.6.1
+pydantic_core>=2.27.1
+PyMySQL>=1.1.1
+pytest>=8.3.3
+pytest-asyncio>=0.24.0
+pytest-mock>=3.14.0
+python-dotenv>=1.0.1
+PyYAML>=6.0.2
+regex>=2024.11.6
+requests>=2.32.3
+rsa>=4.9
+safetensors>=0.4.5
+scikit-learn>=1.5.2
+scipy>=1.14.1
+sentence-transformers>=3.3.1
+sniffio>=1.3.1
+SQLAlchemy>=2.0.36
+sympy>=1.13.3
+Telethon>=1.38.1
+threadpoolctl>=3.5.0
+tokenizers>=0.20.4
+torch>=2.5.1
+tqdm>=4.67.1
+transformers>=4.46.3
+typing_extensions>=4.12.2
+urllib3>=2.2.3
+yarl>=1.18.0
